# trading

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
benches/: orderbook_bench.rs
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs
crates/adapters/src/rest/: dto.rs  handlers.rs
crates/application/: Cargo.toml
crates/application/src/: command.rs  engine_thread.rs  lib.rs  response.rs
crates/domain/: Cargo.toml
crates/domain/benches/: orderbook_bench.rs
crates/domain/src/: error.rs  exchange.rs  lib.rs  order.rs  order_book.rs  order_pool.rs  order_queue.rs  price.rs  trade.rs
crates/gateway/: Cargo.toml
crates/gateway/benches/: latency_bench.rs
crates/gateway/examples/: client.rs
crates/gateway/src/: codec.rs  journal.rs  lib.rs  main.rs  protocol.rs  reactor.rs  session.rs
crates/gateway/tests/: e2e_test.rs
docs/: ARCHITECTURE.md  architecture.md
src/: error.rs  lib.rs  main.rs  market_data.rs  order.rs  order_book.rs  order_pool.rs  price.rs  price_level.rs  trade.rs
