[package]
name = "order-book"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "2.1.1"
chrono = "0.4.44"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "orderbook_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
