[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
rustc-hash = "2.1.1"
chrono = "0.4.44"
criterion = "0.8.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[profile.bench]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = true
