[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
chrono = "0.4.44"
criterion = "0.8.2"
rustc-hash = "2.1.1"

[profile.bench]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = 3
debug = true
lto = "fat"
panic = "abort"
codegen-units = 1
